update: oageTitle responsive

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <div class="mainBody">
       <div class="pageTitle">
-        <h2 id="bonjour" class="my-5">Bonjour!</h2>
+        <h2 id="bonjour">Bonjour!</h2>
       </div>
 
       <div class="row">
