update: images on location.html mobile responsive and aligned

--- a/location.html
+++ b/location.html
@@ -64,8 +64,8 @@
       </section>
 
       <div class="locationBody">
-          <div class="row row1 ml-5">
-            <div class="col-sm-12 col-lg-4">
+          <div class="row row1" id="locationImg1">
+            <div class="col-sm-12 col-lg-4 p-0">
               <img src="https://nebula.wsimg.com/e66b0eaa1e86b7ae0cd0ac05b6664136?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1" 
               alt=""
               class="img"
@@ -105,7 +105,7 @@
             </div>
           </div>
 
-          <div class="row row3 ml-5">
+          <div class="row row3">
             <div class="col-sm-12 col-lg-5">
               <img src="//nebula.wsimg.com/2d8632505d6932900b6b3e24e2246edc?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1" 
               alt=""
