update: mobile responsive 820 x 1180

--- a/location.html
+++ b/location.html
@@ -114,7 +114,7 @@
       </div>
 
       <div class="row row2">
-        <div class="col-sm-12 col-lg-6 order-md-2 imgHouse">
+        <div class="col-sm-12 col-lg-6 order-lg-2 imgHouse">
           <img
             src="//nebula.wsimg.com/dfa6b519070ec546618eb14b84e47acd?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
             alt=""
