update: complete mobile friendly website

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       </div>
 
       <div class="head">
-        <a href="#" class="tile socialmedia"
+        <a href='tel:+12108246308' class="tile socialmedia"
           ><i class="fas fa-phone-square-alt"></i
         ></a>
-        <a href="#" class="tile socialmedia"
+        <a href="location.html#map" class="tile socialmedia"
           ><i class="fas fa-map-marker-alt"></i
         ></a>
         <div class="tile burger">
@@ -91,7 +91,7 @@
         <h2 id="bonjour">Bonjour!</h2>
       </div>
 
-      <div class="row">
+      <div>
         <div class="mt-5">
           <img
             id="flag"
@@ -100,19 +100,23 @@
             alt="CHateau Dijon Flag Pole"
           />
         </div>
-        <div class="col text-center">
-          <h2 class="mb-4 mt-3 ">Charming, Liveable, and Accessible</h2>
-          There is a rumor that Davy Crockett rode right by Chateau Dijon on his
-          way to the Alamo, but we can assure you there is no truth to it. We do
-          have a history, though. Chateau Dijon was built as the most upscale
-          new apartment complex in 78209 back in 1966 and was converted to
-          condominiums in 1978. According to a story that may well be true, no
-          two of the 215 units were ever exactly alike. If this was not true in
-          ’66, it definitely is today, after generations of owners have
-          personalized and customized their homes to make them better reflect
-          their changing lifestyles.
-          <br />
-          <br />
+      </div>
+        <div class="row text-center">
+          <div>
+            <h2 class="mb-4 mt-3 ">Charming, Liveable, and Accessible</h2>
+            There is a rumor that Davy Crockett rode right by Chateau Dijon on his
+            way to the Alamo, but we can assure you there is no truth to it. We do
+            have a history, though. Chateau Dijon was built as the most upscale
+            new apartment complex in 78209 back in 1966 and was converted to
+            condominiums in 1978. According to a story that may well be true, no
+            two of the 215 units were ever exactly alike. If this was not true in
+            ’66, it definitely is today, after generations of owners have
+            personalized and customized their homes to make them better reflect
+            their changing lifestyles.
+            <br />
+            <br />
+          </div>
+          <div class="col">
           Back in 1978, condos were hardly common in San Antonio and the
           uniqueness of the amenities we offer within the village-like
           atmosphere of Alamo Heights immediately set us apart. Texans are
@@ -136,9 +140,9 @@
           <br />
           <br />
           <em>Chateau Dijon Townhomes Owners Association</em>
+          </div>
         </div>
       </div>
-    </div>
 
     <!-- Bootstrap JavaScript CDNs -->
 
@@ -162,6 +166,6 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
