--- a/media.html
+++ b/media.html
@@ -43,8 +43,8 @@
       </div>
 
       <div class="head">
-        <a href="#" class="tile socialmedia"><i class="fas fa-phone-square-alt"></i></a>
-        <a href="#" class="tile socialmedia"><i class="fas fa-map-marker-alt"></i></a> 
+        <a href='tel:+12108246308' class="tile socialmedia"><i class="fas fa-phone-square-alt"></i></a>
+        <a href="location.html#map" class="tile socialmedia"><i class="fas fa-map-marker-alt"></i></a> 
         <div class="tile burger">
           <div class="meat">
             <div class="line one"></div>
@@ -68,7 +68,7 @@
               <h1>Chateau Dijon Media</h1>
             </div>
             
-            <div class="text-left mt-3 d-flex justify-content-center">
+            <div class="text-left mt-3 d-flex justify-content-center year-in-review">
               <ul class="hoaList">
                 <li>
                   <a href="2018Year-in-Review.html">
@@ -114,13 +114,6 @@
             </div>
       </div>
 
-
-
-
-
-
-
-
             <!-- Bootstrap JavaScript CDNs -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -131,7 +124,7 @@
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <!-- Custom JS -->
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
     
   </body>
 </html>
