--- a/2021Year-in-Review.html
+++ b/2021Year-in-Review.html
@@ -43,8 +43,8 @@
       </div>
 
       <div class="head">
-        <a href="#" class="tile socialmedia"><i class="fas fa-phone-square-alt"></i></a>
-        <a href="#" class="tile socialmedia"><i class="fas fa-map-marker-alt"></i></a> 
+        <a href='tel:+12108246308' class="tile socialmedia"><i class="fas fa-phone-square-alt"></i></a>
+        <a href="location.html#map" class="tile socialmedia"><i class="fas fa-map-marker-alt"></i></a> 
         <div class="tile burger">
           <div class="meat">
             <div class="line one"></div>
@@ -80,7 +80,7 @@
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <!-- Custom JS -->
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
     
   </body>
 </html>
