--- a/staff.html
+++ b/staff.html
@@ -43,8 +43,8 @@
       </div>
 
       <div class="head">
-        <a href="#" class="tile socialmedia"><i class="fas fa-phone-square-alt"></i></a>
-        <a href="#" class="tile socialmedia"><i class="fas fa-map-marker-alt"></i></a> 
+        <a href='tel:+12108246308' class="tile socialmedia"><i class="fas fa-phone-square-alt"></i></a>
+        <a href="location.html#map" class="tile socialmedia"><i class="fas fa-map-marker-alt"></i></a> 
         <div class="tile burger">
           <div class="meat">
             <div class="line one"></div>
@@ -64,7 +64,7 @@
       </section>
 
       <div class="pageTitle">
-        <h1>Chateau Dijon Property Staff</h1>
+        <h1>Property Staff</h1>
       </div>
       
 
@@ -120,16 +120,6 @@
         </div>
       </div>
 
-
-
-
-
-
-
-
-
-
-
             <!-- Bootstrap JavaScript CDNs -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -140,7 +130,7 @@
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <!-- Custom JS -->
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
     
   </body>
 </html>
