update: mobile landscape for menu

--- a/2018Year-in-Review.html
+++ b/2018Year-in-Review.html
@@ -50,7 +50,7 @@
         <div class="menu"></div>
         <nav>
           <li><a href="index.html">Home</a></li>
-          <li><a href="location.html">Location</a></li>
+          <li><a href="location.html#jumbotron">Location</a></li>
           <li><a href="hoa.html">Owners Portal</a></li>
           <li><a href="board.html">Board Members</a></li>
           <li><a href="staff.html">Property Staff</a></li>
@@ -61,7 +61,7 @@
       </div>
 
       <div class="head">
-        <a href='tel:+12108246308' class="tile socialmedia"
+        <a href="tel:+12108246308" class="tile socialmedia"
           ><i class="fas fa-phone-square-alt"></i
         ></a>
         <a href="location.html#map" class="tile socialmedia"
