--- a/2019Year-in-Review.html
+++ b/2019Year-in-Review.html
@@ -1,26 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link
+      href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/d3f8d1b062.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d3f8d1b062.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Charm&family=Cormorant+SC&family=EB+Garamond&family=Josefin+Slab&family=Montagu+Slab:wght@300&family=Playfair+Display&family=Tangerine:wght@700&display=swap" rel="stylesheet">        
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Charm&family=Cormorant+SC&family=EB+Garamond&family=Josefin+Slab&family=Montagu+Slab:wght@300&family=Playfair+Display&family=Tangerine:wght@700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Custom Stylesheets -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 
     <title>2019 Year in Review</title>
   </head>
@@ -32,7 +50,7 @@
         <div class="menu"></div>
         <nav>
           <li><a href="index.html">Home</a></li>
-          <li><a href="location.html">Location</a></li>
+          <li><a href="location.html#jumbotron">Location</a></li>
           <li><a href="hoa.html">Owners Portal</a></li>
           <li><a href="board.html">Board Members</a></li>
           <li><a href="staff.html">Property Staff</a></li>
@@ -43,8 +61,12 @@
       </div>
 
       <div class="head">
-        <a href='tel:+12108246308' class="tile socialmedia"><i class="fas fa-phone-square-alt"></i></a>
-        <a href="location.html#map" class="tile socialmedia"><i class="fas fa-map-marker-alt"></i></a> 
+        <a href="tel:+12108246308" class="tile socialmedia"
+          ><i class="fas fa-phone-square-alt"></i
+        ></a>
+        <a href="location.html#map" class="tile socialmedia"
+          ><i class="fas fa-map-marker-alt"></i
+        ></a>
         <div class="tile burger">
           <div class="meat">
             <div class="line one"></div>
@@ -55,32 +77,50 @@
       </div>
     </header>
 
-      <section>
-        <h1 class="writtenLogoBelow my-4"><strong>Chateau Dijon Townhomes</strong></h1>
-        <div class="jumbotron jumbotron-fluid">
-          <div class="container">
-          </div>
-        </div>
-      </section>
-
-      <div class="youtube">
-          <h1 class="my-2 videoTitle">2019 Year in Review</h1>
-          <iframe width="760" height="515" src="https://www.youtube.com/embed/r2hF7HXNxD8" title="Chateau Dijon 2019 Year-in-Review" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section>
+      <h1 class="writtenLogoBelow my-4">
+        <strong>Chateau Dijon Townhomes</strong>
+      </h1>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container"></div>
       </div>
+    </section>
 
+    <div class="youtube">
+      <h1 class="my-2 videoTitle">2019 Year in Review</h1>
+      <iframe
+        width="760"
+        height="515"
+        src="https://www.youtube.com/embed/r2hF7HXNxD8"
+        title="Chateau Dijon 2019 Year-in-Review"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
 
+    <!-- Bootstrap JavaScript CDNs -->
 
-                  <!-- Bootstrap JavaScript CDNs -->
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
     <!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
+    ></script>
 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <!-- Custom JS -->
     <script src="js/index.js"></script>
-    
   </body>
 </html>
