--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="menu"></div>
         <nav>
           <li><a href="#">Home</a></li>
-          <li><a href="location.html">Location</a></li>
+          <li><a href="location.html#jumbotron">Location</a></li>
           <li><a href="hoa.html">Owners Portal</a></li>
           <li><a href="board.html">Board Members</a></li>
           <li><a href="staff.html">Property Staff</a></li>
@@ -61,7 +61,7 @@
       </div>
 
       <div class="head">
-        <a href='tel:+12108246308' class="tile socialmedia"
+        <a href="tel:+12108246308" class="tile socialmedia"
           ><i class="fas fa-phone-square-alt"></i
         ></a>
         <a href="location.html#map" class="tile socialmedia"
@@ -101,22 +101,22 @@
           />
         </div>
       </div>
-        <div class="row text-center">
-          <div>
-            <h2 class="mb-4 mt-3 ">Charming, Liveable, and Accessible</h2>
-            There is a rumor that Davy Crockett rode right by Chateau Dijon on his
-            way to the Alamo, but we can assure you there is no truth to it. We do
-            have a history, though. Chateau Dijon was built as the most upscale
-            new apartment complex in 78209 back in 1966 and was converted to
-            condominiums in 1978. According to a story that may well be true, no
-            two of the 215 units were ever exactly alike. If this was not true in
-            ’66, it definitely is today, after generations of owners have
-            personalized and customized their homes to make them better reflect
-            their changing lifestyles.
-            <br />
-            <br />
-          </div>
-          <div class="col">
+      <div class="row text-center">
+        <div>
+          <h2 class="mb-4 mt-3">Charming, Liveable, and Accessible</h2>
+          There is a rumor that Davy Crockett rode right by Chateau Dijon on his
+          way to the Alamo, but we can assure you there is no truth to it. We do
+          have a history, though. Chateau Dijon was built as the most upscale
+          new apartment complex in 78209 back in 1966 and was converted to
+          condominiums in 1978. According to a story that may well be true, no
+          two of the 215 units were ever exactly alike. If this was not true in
+          ’66, it definitely is today, after generations of owners have
+          personalized and customized their homes to make them better reflect
+          their changing lifestyles.
+          <br />
+          <br />
+        </div>
+        <div class="col">
           Back in 1978, condos were hardly common in San Antonio and the
           uniqueness of the amenities we offer within the village-like
           atmosphere of Alamo Heights immediately set us apart. Texans are
@@ -140,9 +140,9 @@
           <br />
           <br />
           <em>Chateau Dijon Townhomes Owners Association</em>
-          </div>
         </div>
       </div>
+    </div>
 
     <!-- Bootstrap JavaScript CDNs -->
 
