--- a/location.html
+++ b/location.html
@@ -52,7 +52,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header" id="top">
       <h1 class="writtenLogo">Chateau Dijon Townhomes</h1>
       <div class="nav-modal">
         <div class="menu"></div>
@@ -89,7 +89,7 @@
       <h1 class="writtenLogoBelow my-4">
         <strong>Chateau Dijon Townhomes</strong>
       </h1>
-      <div class="jumbotron jumbotron-fluid" id="jumbotron">
+      <div class="jumbotron jumbotron-fluid">
         <div class="container"></div>
       </div>
     </section>
