fix office hours using css

--- a/website files/2018Year-in-Review.html
+++ b/website files/2018Year-in-Review.html
@@ -40,12 +40,12 @@
     <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Chateau Dijon Media</title>
+    <title>2018 Year in Review</title>
   </head>
 
   <body>
     <header class="header">
-      <h1 class="writtenLogo">Chateau Dijon Townhomes</h1>
+      <h1 class="writtenLogo"><a href="index.html">Chateau Dijon Townhomes</a></h1>
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
@@ -56,7 +56,7 @@
           <li><a href="staff.html">Property Staff</a></li>
           <li><a href="contractor.html">Contractors</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="#">Media</a></li>
+          <li><a href="media.html">Media</a></li>
         </nav>
       </div>
 
@@ -86,56 +86,69 @@
       </div>
     </section>
 
-    <div class="mainBody">
-      <div class="pageTitle">
-        <h1>Chateau Dijon Media</h1>
-      </div>
-
-      <div class="text-left mt-3 d-flex justify-content-center year-in-review">
-        <ul class="hoaList">
-          <li>
-            <a href="2018Year-in-Review.html">
-              <h4>
-                <span>
-                  <img src="img/fleur-de-lis-stencil.png" alt="" />
-                </span>
-                2018 Year in Review
-              </h4>
-            </a>
-          </li>
-          <li>
-            <a href="2019Year-in-Review.html">
-              <h4>
-                <span>
-                  <img src="img/fleur-de-lis-stencil.png" alt="" />
-                </span>
-                2019 Year in Review
-              </h4>
-            </a>
-          </li>
-          <li>
-            <a href="2020Year-in-Review.html">
-              <h4>
-                <span>
-                  <img src="img/fleur-de-lis-stencil.png" alt="" />
-                </span>
-                2020 Year in Review
-              </h4>
-            </a>
-          </li>
-          <li>
-            <a href="2021Year-in-Review.html">
-              <h4>
-                <span>
-                  <img src="img/fleur-de-lis-stencil.png" alt="" />
-                </span>
-                2021 Year in Review
-              </h4>
-            </a>
-          </li>
-        </ul>
+    <div class="youtube">
+      <h1 class="my-2 videoTitle">2018 Year in Review</h1>
+      <div class="auto-resize">
+        <div>
+          <iframe
+            src="https://www.youtube.com/embed/36fzlooA_nw"
+            title="Chateau Dijon 2018 Year-in-Review"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
       </div>
     </div>
+
+     <!-- Footer -->
+     <footer class=" my-md-5 pt-md-5 border-top">
+      <div class="row mb-5 d-flex mt-2">
+        <div class="col-12 col-md ">
+          <h2>Chateau Dijon Townhomes</h2>
+        </div>
+        <div class="col-6 col-md">
+          <h4>Contact</h4>
+            <div>
+              <p class="text-muted">7711 Broadway Ste B22</p>
+              <p class="text-muted">San Antonio, TX 78209</p>
+              <p class="text-muted">Phone: (210) 824-6308</p> 
+            </div>
+              <div>
+                <p class="text-muted d-flex justify-content-start" id="hours">Office Hours:</p>
+                <div class="col d-flex text-left">
+                  <ul class="list-unstyled text-muted">
+                    <li>Mon -Fri	8AM–4PM</li>
+                    <li>Sat & Sun	Closed</li>
+                  </ul>
+                </div>
+              </div>
+        </div>
+        <div class="col-6 col-md">
+          <h4>Resources</h4>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
+            <li><a class="text-muted" href="contractor.html">Contarctors</a></li>
+            <li><a class="text-muted" href="media.html">Media</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h4>About</h4>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="location.html">Location</a></li>
+            <li><a class="text-muted" href="staff.html">Staff</a></li>
+            <li><a class="text-muted" href="board.html">Board Members</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="powered-by text-center pt-5">
+        <small>
+          &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered
+          by
+          <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
+        </small>
+      </div>
+    </footer>
 
     <!-- Bootstrap JavaScript CDNs -->
 
