--- a/website files/2019Year-in-Review.html
+++ b/website files/2019Year-in-Review.html
@@ -40,16 +40,18 @@
     <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Chateau Dijon</title>
+    <title>2019 Year in Review</title>
   </head>
 
   <body>
     <header class="header">
-      <h1 class="writtenLogo">Chateau Dijon Townhomes</h1>
+      <h1 class="writtenLogo">
+        <a href="index.html">Chateau Dijon Townhomes</a>
+      </h1>
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="location.html#top">Location</a></li>
           <li><a href="hoa.html">Owners Portal</a></li>
           <li><a href="board.html">Board Members</a></li>
@@ -78,7 +80,7 @@
     </header>
 
     <section>
-      <h1 class="writtenLogoBelow my-4 mx-2">
+      <h1 class="writtenLogoBelow my-4">
         <strong>Chateau Dijon Townhomes</strong>
       </h1>
       <div class="jumbotron jumbotron-fluid">
@@ -86,63 +88,75 @@
       </div>
     </section>
 
-    <div class="mainBody">
-      <div class="pageTitle">
-        <h2 id="bonjour">Bonjour!</h2>
-      </div>
-
-      <div>
-        <div class="mt-5">
-          <img
-            id="flag"
-            class="img"
-            src="https://nebula.wsimg.com/1d96a5ef1c66effcb5fd3fdee58fff03?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
-            alt="CHateau Dijon Flag Pole"
-          />
-        </div>
-      </div>
-      <div class="row text-center">
+    <div class="youtube">
+      <h1 class="my-2 videoTitle">2019 Year in Review</h1>
+      <div class="auto-resize">
         <div>
-          <h2 class="mb-4 mt-3">Charming, Liveable, and Accessible</h2>
-          There is a rumor that Davy Crockett rode right by Chateau Dijon on his
-          way to the Alamo, but we can assure you there is no truth to it. We do
-          have a history, though. Chateau Dijon was built as the most upscale
-          new apartment complex in 78209 back in 1966 and was converted to
-          condominiums in 1978. According to a story that may well be true, no
-          two of the 215 units were ever exactly alike. If this was not true in
-          ’66, it definitely is today, after generations of owners have
-          personalized and customized their homes to make them better reflect
-          their changing lifestyles.
-          <br />
-          <br />
-        </div>
-        <div class="col">
-          Back in 1978, condos were hardly common in San Antonio and the
-          uniqueness of the amenities we offer within the village-like
-          atmosphere of Alamo Heights immediately set us apart. Texans are
-          generally people who love their homesteads and their land as much as
-          they love their independence, and the interdependent, yet tremendously
-          convenient way of living that condo life offers was new to the city
-          back then. Fortunately, Chateau Dijon’s unbeatable location has always
-          given residents here many advantages, and we soon attracted converts.
-          <br />
-          <br />
-          Today, we remain one of the most distinguished and desirable condo
-          complexes in the area. Park your car at home. Walk to stores and
-          restaurants. Get to know some of the best neighbors in town. In so
-          many ways we make life not only a little easier but a lot more
-          civilized as well. Add the convenience of being minutes away from the
-          airport and easy access to downtown and major highways, and it really
-          is hard to find a better location anywhere in San Antonio.
-          <br />
-          <br />
-          <strong>Board of Directors</strong>
-          <br />
-          <br />
-          <em>Chateau Dijon Townhomes Owners Association</em>
+          <iframe
+            width="760"
+            height="515"
+            src="https://www.youtube.com/embed/r2hF7HXNxD8"
+            title="Chateau Dijon 2019 Year-in-Review"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="my-md-5 pt-md-5 border-top">
+      <div class="row mb-5 d-flex mt-2">
+        <div class="col-12 col-md">
+          <h2>Chateau Dijon Townhomes</h2>
+        </div>
+        <div class="col-6 col-md">
+          <h4>Contact</h4>
+          <div>
+            <p class="text-muted">7711 Broadway Ste B22</p>
+            <p class="text-muted">San Antonio, TX 78209</p>
+            <p class="text-muted">Phone: (210) 824-6308</p>
+          </div>
+          <div>
+            <p class="text-muted d-flex justify-content-start" id="hours">
+              Office Hours:
+            </p>
+            <div class="col d-flex text-left">
+              <ul class="list-unstyled text-muted">
+                <li>Mon -Fri 8AM–4PM</li>
+                <li>Sat & Sun Closed</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md">
+          <h4>Resources</h4>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
+            <li>
+              <a class="text-muted" href="contractor.html">Contarctors</a>
+            </li>
+            <li><a class="text-muted" href="media.html">Media</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h4>About</h4>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="location.html">Location</a></li>
+            <li><a class="text-muted" href="staff.html">Staff</a></li>
+            <li><a class="text-muted" href="board.html">Board Members</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="powered-by text-center pt-5">
+        <small>
+          &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered
+          by
+          <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
+        </small>
+      </div>
+    </footer>
 
     <!-- Bootstrap JavaScript CDNs -->
 
