--- a/website files/2020Year-in-Review.html
+++ b/website files/2020Year-in-Review.html
@@ -27,7 +27,7 @@
 
   <body>
     <header class="header">
-      <h1 class="writtenLogo">Chateau Dijon Townhomes</h1>
+      <h1 class="writtenLogo"><a href="index.html">Chateau Dijon Townhomes</a></h1>
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
@@ -65,8 +65,61 @@
 
       <div class="youtube">
           <h1 class="my-2 videoTitle">2020 Year in Review</h1>
-          <iframe width="760" height="515" src="https://www.youtube.com/embed/9qr_Rxm4E50" title="Chateau Dijon 2020 Year-in-Review" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+          <div class="auto-resize">
+            <div>
+              <iframe width="760" height="515" src="https://www.youtube.com/embed/9qr_Rxm4E50" title="Chateau Dijon 2020 Year-in-Review" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+            </div>
+          </div>
       </div>
+
+       <!-- Footer -->
+       <footer class=" my-md-5 pt-md-5 border-top">
+        <div class="row mb-5 d-flex mt-2">
+          <div class="col-12 col-md ">
+            <h2>Chateau Dijon Townhomes</h2>
+          </div>
+          <div class="col-6 col-md">
+            <h4>Contact</h4>
+              <div>
+                <p class="text-muted">7711 Broadway Ste B22</p>
+                <p class="text-muted">San Antonio, TX 78209</p>
+                <p class="text-muted">Phone: (210) 824-6308</p> 
+              </div>
+                <div>
+                  <p class="text-muted d-flex justify-content-start" id="hours">Office Hours:</p>
+                  <div class="col d-flex text-left">
+                    <ul class="list-unstyled text-muted">
+                      <li>Mon -Fri	8AM–4PM</li>
+                      <li>Sat & Sun	Closed</li>
+                    </ul>
+                  </div>
+                </div>
+          </div>
+          <div class="col-6 col-md">
+            <h4>Resources</h4>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
+              <li><a class="text-muted" href="contractor.html">Contarctors</a></li>
+              <li><a class="text-muted" href="media.html">Media</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h4>About</h4>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="location.html">Location</a></li>
+              <li><a class="text-muted" href="staff.html">Staff</a></li>
+              <li><a class="text-muted" href="board.html">Board Members</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="powered-by text-center pt-5">
+          <small>
+            &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered
+            by
+            <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
+          </small>
+        </div>
+      </footer>
 
 
 
