--- a/website files/media.html
+++ b/website files/media.html
@@ -40,23 +40,23 @@
     <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Owners Portal</title>
+    <title>Chateau Dijon Media</title>
   </head>
 
   <body>
     <header class="header">
-      <h1 class="writtenLogo">Chateau Dijon Townhomes</h1>
+      <h1 class="writtenLogo"><a href="index.html">Chateau Dijon Townhomes</a></h1>
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
           <li><a href="index.html">Home</a></li>
           <li><a href="location.html#top">Location</a></li>
-          <li><a href="#">Owners Portal</a></li>
+          <li><a href="hoa.html">Owners Portal</a></li>
           <li><a href="board.html">Board Members</a></li>
           <li><a href="staff.html">Property Staff</a></li>
           <li><a href="contractor.html">Contractors</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="media.html">Media</a></li>
+          <li><a href="#">Media</a></li>
         </nav>
       </div>
 
@@ -88,49 +88,102 @@
 
     <div class="mainBody">
       <div class="pageTitle">
-        <h1>Owners Portal</h1>
+        <h1>Chateau Dijon Media</h1>
       </div>
 
-      <div class="text-left mt-3 d-flex justify-content-center">
-        <ul class="hoaList owners">
+      <div class="text-left mt-3 d-flex justify-content-center year-in-review">
+        <ul class="hoaList">
           <li>
-            <a
-              href="https://nebula.wsimg.com/555f2489c207893efb497c65bb32e591?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
-              target="_blank"
-            >
+            <a href="2018Year-in-Review.html">
               <h4>
                 <span>
                   <img src="img/fleur-de-lis-stencil.png" alt="" />
                 </span>
-                Application for alteration of Unit
+                2018 Year in Review
               </h4>
             </a>
           </li>
           <li>
-            <a
-              href="https://nebula.wsimg.com/6185ed21b7bdca7984db865e9f4b91be?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
-              target="_blank"
-            >
+            <a href="2019Year-in-Review.html">
               <h4>
                 <span>
                   <img src="img/fleur-de-lis-stencil.png" alt="" />
                 </span>
-                Parking Permit Form
+                2019 Year in Review
               </h4>
             </a>
           </li>
           <li>
-            <a href="governing-documents.html">
+            <a href="2020Year-in-Review.html">
               <h4>
                 <span>
                   <img src="img/fleur-de-lis-stencil.png" alt="" />
                 </span>
-                Governing Documents
+                2020 Year in Review
+              </h4>
+            </a>
+          </li>
+          <li>
+            <a href="2021Year-in-Review.html">
+              <h4>
+                <span>
+                  <img src="img/fleur-de-lis-stencil.png" alt="" />
+                </span>
+                2021 Year in Review
               </h4>
             </a>
           </li>
         </ul>
       </div>
+
+       <!-- Footer -->
+       <footer class=" my-md-5 pt-md-5 border-top">
+        <div class="row mb-5 d-flex mt-2">
+          <div class="col-12 col-md ">
+            <h2>Chateau Dijon Townhomes</h2>
+          </div>
+          <div class="col-6 col-md">
+            <h4>Contact</h4>
+              <div>
+                <p class="text-muted">7711 Broadway Ste B22</p>
+                <p class="text-muted">San Antonio, TX 78209</p>
+                <p class="text-muted">Phone: (210) 824-6308</p> 
+              </div>
+                <div>
+                  <p class="text-muted d-flex justify-content-start" id="hours">Office Hours:</p>
+                  <div class="col d-flex text-left">
+                    <ul class="list-unstyled text-muted">
+                      <li>Mon -Fri	8AM–4PM</li>
+                      <li>Sat & Sun	Closed</li>
+                    </ul>
+                  </div>
+                </div>
+          </div>
+          <div class="col-6 col-md">
+            <h4>Resources</h4>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
+              <li><a class="text-muted" href="contractor.html">Contarctors</a></li>
+              <li><a class="text-muted" href="media.html">Media</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h4>About</h4>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="location.html">Location</a></li>
+              <li><a class="text-muted" href="staff.html">Staff</a></li>
+              <li><a class="text-muted" href="board.html">Board Members</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="powered-by text-center pt-5">
+          <small>
+            &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered
+            by
+            <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
+          </small>
+        </div>
+      </footer>
     </div>
 
     <!-- Bootstrap JavaScript CDNs -->
