--- a/website files/board.html
+++ b/website files/board.html
@@ -40,20 +40,22 @@
     <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Property Staff</title>
+    <title>Our Board</title>
   </head>
 
   <body>
     <header class="header">
-      <h1 class="writtenLogo">Chateau Dijon Townhomes</h1>
+      <h1 class="writtenLogo">
+        <a href="index.html">Chateau Dijon Townhomes</a>
+      </h1>
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
           <li><a href="index.html">Home</a></li>
           <li><a href="location.html#top">Location</a></li>
           <li><a href="hoa.html">Owners Portal</a></li>
-          <li><a href="board.html">Board Members</a></li>
-          <li><a href="#">Property Staff</a></li>
+          <li><a href="#">Board Members</a></li>
+          <li><a href="staff.html">Property Staff</a></li>
           <li><a href="contractor.html">Contractors</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="media.html">Media</a></li>
@@ -87,63 +89,101 @@
     </section>
 
     <div class="pageTitle">
-      <h1>Property Staff</h1>
+      <h1>Board of Directors</h1>
     </div>
+    <div class="mainBody">
+      <div class="d-flex justify-content-center">
+        <div class="row">
+          <div class="col members">
+            <h4>
+              <span>
+                <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
+              </span>
+              Greg Bolden, President
+            </h4>
 
-    <div class="d-flex justify-content-center my-5">
-      <img
-        class="img"
-        src="https://nebula.wsimg.com/4cb7e034fc00d7b203270ec1821a198c?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
-        alt="Chateau Dijon Property Staff Picture"
-      />
-    </div>
+            <h4>
+              <span>
+                <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
+              </span>
+              Paula Rast, Vice President
+            </h4>
 
-    <div class="d-flex justify-content-center pb-5">
-      <div class="row">
-        <div class="col members">
-          <h4>
-            <span>
-              <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-            </span>
-            Simon​​e Perry - <span>Association Manager</span>
-          </h4>
+            <h4>
+              <span>
+                <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
+              </span>
+              Dolores Villarreal, Treasurer
+            </h4>
 
-          <h4>
-            <span>
-              <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-            </span>
-            Ashley Chapman - Administrative Assistant/ Bookeeper
-          </h4>
+            <h4>
+              <span>
+                <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
+              </span>
+              Martha Leske, Secretary
+            </h4>
 
-          <h4>
-            <span>
-              <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-            </span>
-            Margie Ochoa - Housekeeping
-          </h4>
-
-          <h4>
-            <span>
-              <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-            </span>
-            Juan Alejandro - Maintenance Superintendent
-          </h4>
-
-          <h4>
-            <span>
-              <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-            </span>
-            Jorge Gonzalez - Maintenance
-          </h4>
-
-          <h4>
-            <span>
-              <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-            </span>
-            Joshua Quave - Maintenance
-          </h4>
+            <h4>
+              <span>
+                <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
+              </span>
+              Vincent Di Blasi, Member At Large
+            </h4>
+          </div>
         </div>
       </div>
+
+      <!-- Footer -->
+      <footer class="my-md-5 pt-md-5 border-top">
+        <div class="row mb-5 d-flex mt-2">
+          <div class="col-12 col-md">
+            <h2>Chateau Dijon Townhomes</h2>
+          </div>
+          <div class="col-6 col-md">
+            <h4>Contact</h4>
+            <div>
+              <p class="text-muted">7711 Broadway Ste B22</p>
+              <p class="text-muted">San Antonio, TX 78209</p>
+              <p class="text-muted">Phone: (210) 824-6308</p>
+            </div>
+            <div>
+              <p class="text-muted d-flex justify-content-start" id="hours">
+                Office Hours:
+              </p>
+              <div class="col d-flex text-left">
+                <ul class="list-unstyled text-muted">
+                  <li>Mon -Fri 8AM–4PM</li>
+                  <li>Sat & Sun Closed</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md">
+            <h4>Resources</h4>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
+              <li>
+                <a class="text-muted" href="contractor.html">Contarctors</a>
+              </li>
+              <li><a class="text-muted" href="media.html">Media</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h4>About</h4>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="location.html">Location</a></li>
+              <li><a class="text-muted" href="staff.html">Staff</a></li>
+              <li><a class="text-muted" href="board.html">Board Members</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="powered-by text-center pt-5">
+          <small>
+            &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered by
+            <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
+          </small>
+        </div>
+      </footer>
     </div>
 
     <!-- Bootstrap JavaScript CDNs -->
