--- a/website files/contractor.html
+++ b/website files/contractor.html
@@ -40,12 +40,12 @@
     <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="styles.css" />
 
-    <title>2019 Year in Review</title>
+    <title>Contractors Information</title>
   </head>
 
   <body>
     <header class="header">
-      <h1 class="writtenLogo">Chateau Dijon Townhomes</h1>
+      <h1 class="writtenLogo"><a href="index.html">Chateau Dijon Townhomes</a></h1>
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
@@ -54,7 +54,7 @@
           <li><a href="hoa.html">Owners Portal</a></li>
           <li><a href="board.html">Board Members</a></li>
           <li><a href="staff.html">Property Staff</a></li>
-          <li><a href="contractor.html">Contractors</a></li>
+          <li><a href="#">Contractors</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="media.html">Media</a></li>
         </nav>
@@ -86,18 +86,75 @@
       </div>
     </section>
 
-    <div class="youtube">
-      <h1 class="my-2 videoTitle">2019 Year in Review</h1>
-      <iframe
-        width="760"
-        height="515"
-        src="https://www.youtube.com/embed/r2hF7HXNxD8"
-        title="Chateau Dijon 2019 Year-in-Review"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
+    <div class="pageTitle">
+      <h1>Contractors Information</h1>
     </div>
+
+    <div class="d-flex justify-content-center my-5">
+      <img
+        class="img"
+        src="https://nebula.wsimg.com/d19997960d7d91eb220144fde559521f?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+        alt="Chateau Dijon Contractors Information"
+      />
+    </div>
+
+    <div class="d-flex justify-content-center pb-5">
+      <a
+        href="https://nebula.wsimg.com/c59571525a9a8464f837e42d0f5c8606?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+        target="_blank"
+        type="button"
+        class="btn btn-warning btn-lg"
+        >Contractor Info PDF</a
+      >
+    </div>
+     <!-- Footer -->
+     <footer class=" my-md-5 pt-md-5 border-top">
+      <div class="row mb-5 d-flex mt-2">
+        <div class="col-12 col-md ">
+          <h2>Chateau Dijon Townhomes</h2>
+        </div>
+        <div class="col-6 col-md">
+          <h4>Contact</h4>
+            <div>
+              <p class="text-muted">7711 Broadway Ste B22</p>
+              <p class="text-muted">San Antonio, TX 78209</p>
+              <p class="text-muted">Phone: (210) 824-6308</p> 
+            </div>
+              <div>
+                <p class="text-muted d-flex justify-content-start" id="hours">Office Hours:</p>
+                <div class="col d-flex text-left">
+                  <ul class="list-unstyled text-muted">
+                    <li>Mon -Fri	8AM–4PM</li>
+                    <li>Sat & Sun	Closed</li>
+                  </ul>
+                </div>
+              </div>
+        </div>
+        <div class="col-6 col-md">
+          <h4>Resources</h4>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
+            <li><a class="text-muted" href="contractor.html">Contarctors</a></li>
+            <li><a class="text-muted" href="media.html">Media</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h4>About</h4>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="location.html">Location</a></li>
+            <li><a class="text-muted" href="staff.html">Staff</a></li>
+            <li><a class="text-muted" href="board.html">Board Members</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="powered-by text-center pt-5">
+        <small>
+          &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered
+          by
+          <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
+        </small>
+      </div>
+    </footer>
 
     <!-- Bootstrap JavaScript CDNs -->
 
