Update: staff.htnl

--- a/website_files/staff.html
+++ b/website_files/staff.html
@@ -92,10 +92,10 @@
       <h1>Property Staff</h1>
     </div>
 
-    <div class="d-flex justify-content-center my-5">
+    <div class="d-flex justify-content-center my-5 staff-image-container">
       <img
-        class="img"
-        src="https://nebula.wsimg.com/4cb7e034fc00d7b203270ec1821a198c?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+        class="img img-fluid"
+        src="./img/Staff picture.jpeg"
         alt="Chateau Dijon Property Staff Picture"
       />
     </div>
