Update: board.html styles.css

--- a/website_files/board.html
+++ b/website_files/board.html
@@ -92,6 +92,15 @@
       <h1>Board of Directors</h1>
     </div>
     <div class="mainBody">
+
+      <div class="d-flex justify-content-center my-5 board-image-container">
+        <img
+          class="img img-fluid"
+          src="./img/Board picture.png"
+          alt="Chateau Dijon Property Staff Picture"
+        />
+      </div>
+
       <div class="d-flex justify-content-center">
         <div class="row">
           <div class="col members">
@@ -120,7 +129,7 @@
               <span>
                 <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
               </span>
-              Martha Leske, Secretary
+              Terri Ford, Secretary
             </h4>
 
             <h4>
