Updtae: staff.html

--- a/website_files/board.html
+++ b/website_files/board.html
@@ -96,7 +96,7 @@
       <div class="d-flex justify-content-center my-5 board-image-container">
         <img
           class="img img-fluid"
-          src="./img/Board picture.png"
+          src="./img/board-picture.jpg"
           alt="Chateau Dijon Property Staff Picture"
         />
       </div>
