--- a/website_files/staff.html
+++ b/website_files/staff.html
@@ -92,13 +92,13 @@
       <h1>Property Staff</h1>
     </div>
 
-    <div class="d-flex justify-content-center my-5 staff-image-container">
+    <!-- <div class="d-flex justify-content-center my-5 staff-image-container">
       <img
         class="img img-fluid"
         src="./img/Staff picture.jpeg"
         alt="Chateau Dijon Property Staff Picture"
       />
-    </div>
+    </div> -->
 
     <div class="d-flex justify-content-center pb-5 mainBody">
       <div class="row">
@@ -114,7 +114,7 @@
             <span>
               <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
             </span>
-            Ashley Chapman - Administrative Assistant/ Bookeeper
+            Natalie Salazar - Administrative Assistant/ Bookeeper
           </h4>
 
           <h4>
