--- a/website_files/staff.html
+++ b/website_files/staff.html
@@ -92,13 +92,13 @@
       <h1>Property Staff</h1>
     </div>
 
-    <!-- <div class="d-flex justify-content-center my-5 staff-image-container">
+    <div class="d-flex justify-content-center my-5 staff-image-container">
       <img
         class="img img-fluid"
-        src="./img/Staff picture.jpeg"
+        src="./img/Staff_Update_2023.jpeg"
         alt="Chateau Dijon Property Staff Picture"
       />
-    </div> -->
+    </div>
 
     <div class="d-flex justify-content-center pb-5 mainBody">
       <div class="row">
